--- a/Movie Data Cleaning and Exploration.ipynb
+++ b/Movie Data Cleaning and Exploration.ipynb
@@ -19,9 +19,9 @@
     "%matplotlib inline\n",
     "matplotlib.rcParams['figure.figsize']=(12,12) #Adjusts the configurations of the plot created\n",
     "\n",
-    "# Read in the data\n",
+    "# Read in the data (Entire pathway not shown for security reasons)\n",
     "\n",
-    "df=pd.read_csv(r'C:\\Users\\reyje\\OneDrive\\Documents\\SQL Server Management Studio\\movies.csv')"
+    "df=pd.read_csv(r'-----------\\movies.csv')" 
    ]
   },
   {
