Update Israel-Palestine Conflict Project.ipynb

--- a/Israel-Palestine Conflict Project.ipynb
+++ b/Israel-Palestine Conflict Project.ipynb
@@ -3715,7 +3715,7 @@
     "\n",
     "This suggests that when it comes to the possibility of crafting policies to bring justice about the victims, it would be prudent to highlight the number of young Palestinian victims because the ages of their deaths means greater unrealized aspirations and younger deaths tend to agitate the population of the nationality that they belong to.\n",
     "\n",
-    "The purpose of this is to possibly bring about more proportionate policies to the said possible policies."
+    "The purpose of this is to possibly bring about more proportionate policies in the pursuit for justice."
    ]
   },
   {
@@ -4270,7 +4270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice how there are no Israelis that actively participated the violence. This is because Israel is a state and the decisions of the state most likely reflects the stances of the majority of its own population. More research is needed to determine about the percent of Israelis supporting attacks/retaliation on Palestines. This is likely represented by polls. Most of the Israeli deaths probably comes from the military.\n",
+    "Notice how there are no Israeli Civilians that actively participated the violence. This is because Israel is a state and the decisions of the state most likely reflects the stances of the majority of its own population. More research is needed to determine about the percent of Israelis supporting attacks/retaliation on Palestines. This is likely represented by polls. Most of the Israeli deaths probably comes from the military.\n",
     "\n",
     "Palestinians are stateless, meaning if acts of violence will be done by them, it would be from certain individuals or groups that does not likely represent the will of the entire population. Notice also that the number of victims who did not participate in the violence is higher than those who did. There are even a few who are object of targeted killings.\n",
     "\n",
