Update Israel-Palestine Conflict Project.ipynb

--- a/Israel-Palestine Conflict Project.ipynb
+++ b/Israel-Palestine Conflict Project.ipynb
@@ -4270,7 +4270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice how there are no Israeli Civilians that actively participated the violence. This is because Israel is a state and the decisions of the state most likely reflects the stances of the majority of its own population. More research is needed to determine about the percent of Israelis supporting attacks/retaliation on Palestines. This is likely represented by polls. Most of the Israeli deaths probably comes from the military.\n",
+    "The participation of Israelis to the violence cannot be categorized because Israel is a state and the decisions of the state most likely reflects the stances of the majority of its own population. More research is needed to determine about the percent of Israelis supporting attacks/retaliation on Palestines. This is likely represented by polls. The Israeli state has an organized military so most of their deaths may come from the military.\n",
     "\n",
     "Palestinians are stateless, meaning if acts of violence will be done by them, it would be from certain individuals or groups that does not likely represent the will of the entire population. Notice also that the number of victims who did not participate in the violence is higher than those who did. There are even a few who are object of targeted killings.\n",
     "\n",
