Update Israel-Palestine Conflict Project.ipynb

--- a/Israel-Palestine Conflict Project.ipynb
+++ b/Israel-Palestine Conflict Project.ipynb
@@ -4323,7 +4323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most deaths in each nationality peaks at around 20 years old. There are markedly more adult (>=25yrs old) deaths in the Israeli population in its own histogram as compared to the adult deaths in the Palestinian population in its own distribution.\n",
+    "Most deaths in each nationality peaks at around 20 years old. There are markedly more percent adult (>=25yrs old) deaths in the Israeli population as compared to the percent adult deaths in the Palestinian population .\n",
     "\n",
     "This gives the impression that the death percentage of younger Palestinian is higher than the death percentage of younger Israelis."
    ]
